# heatshieldagri

./: .gitignore  README.md  history.txt
.github/workflows/: android-build.yml
Android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
Android/app/: build.gradle.kts  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
USSD/: .env.example  Cargo.toml  Dockerfile
USSD/src/: config.rs  error.rs  main.rs
USSD/src/handlers/: health.rs  mod.rs  ussd.rs
USSD/src/i18n/: messages.rs  mod.rs
USSD/src/menu/: mod.rs  renderer.rs  screens.rs
USSD/src/models/: forecast.rs  mod.rs  user.rs
USSD/src/services/: forecast.rs  location.rs  mod.rs  user.rs  wbgt.rs
USSD/src/session/: mod.rs  state.rs  store.rs
docs/: Deployment_Readiness_Strategy_Report.docx  Deployment_Readiness_Strategy_Report.md  HeatShield_Agri_Architecture.docx  HeatShield_Agri_Budget.xlsx  HeatShield_Agri_Grant_Application.docx  HeatShield_Agri_Pitch_Deck.pptx  HeatShield_QA_Professional.docx  HeatShield_QA_Talking_Points.docx  HeatShield_RF_PCE_Training.ipynb  generate_all_docs.py  generate_architecture_doc.py  generate_qa_docs.py  generate_strategy_report.py  update_qa_docs.py
web/frontend/: .gitignore  INTEGRATION_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
web/frontend/public/models/: humidity_model.onnx  humidity_pce.json  model_metadata.json  pce-inference.js  temperature_model.onnx  temperature_pce.json  training_data.parquet  training_report.json  windspeed_model.onnx  windspeed_pce.json
web/frontend/src/: App.tsx  index.css  main.tsx  ml-inference.ts  pce-inference.ts  store.ts  wasm-runtime.ts  wasm.ts
web/frontend/src/hooks/: useHeatShieldML.ts  useHeatShieldPCE.ts  useWeather.ts
web/frontend/src/pages/: About.tsx  Alerts.tsx  Dashboard.tsx  Demo.tsx  Forecast.tsx  HeatMap.tsx  MLForecastPanel.tsx  PCEForecastPanel.tsx  Schedule.tsx
web/heatshield-wasm/: Cargo.toml
web/heatshield-wasm/pkg/: heatshield_wasm.d.ts  heatshield_wasm.js  heatshield_wasm_bg.wasm  heatshield_wasm_bg.wasm.d.ts  package.json
web/heatshield-wasm/src/: interpolation.rs  lib.rs  risk_classifier.rs  schedule.rs  wbgt.rs
(+26 files in other folders)
