[package]
name = "heatshield-ussd"
version = "1.0.0"
edition = "2021"
authors = ["HeatShield Agri Team"]
description = "USSD Application for HeatShield Agri - Feature phone access to heat stress warnings"
license = "MIT"

[[bin]]
name = "heatshield-ussd"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Redis for sessions
deadpool-redis = "0.14"
redis = "0.24"

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for Africa's Talking API)
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
actix-rt = "2"

[profile.release]
opt-level = 3
lto = true
