[package]
name = "heatshield-wasm"
version = "1.0.0"
edition = "2021"
authors = ["HeatShield Agri Team"]
description = "WebAssembly module for WBGT calculations and heat stress prediction"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

# Error handling in browser
console_error_panic_hook = { version = "0.1.7", optional = true }

# Logging
web-sys = { version = "0.3.69", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Navigator",
    "Geolocation",
    "Position",
    "Coordinates"
]}

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true
